--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="D:/Downloads/sikulixapi-2.0.5-win.jar"/>
 	<classpathentry kind="lib" path="D:/Downloads/selenium-server-4.1.1.jar"/>
 	<classpathentry kind="lib" path="D:/Downloads/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/gson-2.9.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
